ِAFCC invoice format

--- a/AFCC_invoice_report/report/invoice_report.xml
+++ b/AFCC_invoice_report/report/invoice_report.xml
@@ -225,7 +225,7 @@
                               <p class="oe_inline" style="line-height: auto !important;" t-if="o.partner_id.name"><span style="color:black;">اسم العميل</span>:<span t-esc="o.partner_id.arabic_name"/></p>
                               <p style="line-height: auto !important;" t-if="o.partner_id.street2"><span style="color:black;">عنوان العميل</span>:<span t-esc="o.partner_id.street2"/></p>
                               <p style="line-height: auto !important;" t-if="o.partner_id.vat"><span t-esc="o.partner_id.vat"/><span style="color:black;">:الرقم الضريبي للعميل</span></p>
-                              <p style="line-height: auto !important;" t-if="o.landing_place.name"><span t-esc="o.landing_place.arabic_name"/><span style="color:black;">:الميناء</span></p>
+                              <p style="line-height: auto !important;" t-if="o.landing_place.name"><span style="color:black;">الميناء</span>:<span t-esc="o.landing_place.arabic_name"/></p>
         <!--                      <p t-if="o.partner_id.phone"><span>:الجوال</span></p>-->
         <!--                      <p t-if="o.partner_id.mobile"><span>:الهاتف المحمول</span></p>-->
         <!--                      <p t-if="o.partner_id.email"><span>:البريد الالكتروني</span></p>-->
