--- a/FMT_invoice_format/report/invoice_report.xml
+++ b/FMT_invoice_format/report/invoice_report.xml
@@ -267,7 +267,7 @@
 
                      <div class="container-fluid" >
                           <div style="width:100%;" class="row">
-                            <div class="col-auto" style="width:50%;text-align:left;line-height: 0.5 !important;">
+                            <div class="col-auto" style="width:50%;text-align:left;line-height: 0.8 !important;">
                               <p t-if="o.partner_id.name"><span style="color:black;">Customer Name :</span> <span t-esc="o.partner_id.name"/></p>
                               <p t-if="o.partner_id.street"><span style="color:black;">Customer Address : </span><span t-esc="o.partner_id.street"/></p>
                               <p t-if="o.partner_id.vat"><span style="color:black;">Customer VAT No:</span><span t-esc="o.partner_id.vat"/></p>
@@ -296,7 +296,7 @@
 <!--                              <p t-if="o.bill_of_lading"><span t-esc="o.bill_of_lading"/></p>-->
 <!--                            </div>-->
 
-                            <div class="col-auto" style="width:50%;text-align:right;line-height: 0.5 !important;">
+                            <div class="col-auto" style="width:50%;text-align:right;line-height: 0.8 !important;">
                               <p t-if="o.partner_id.name"><span style="color:black;">اسم العميل</span>:<span t-esc="o.partner_id.arabic_name"/></p>
                               <p t-if="o.partner_id.street2"><span style="color:black;">عنوان العميل</span>:<span t-esc="o.partner_id.street2"/></p>
                               <p t-if="o.partner_id.vat"><span t-esc="o.partner_id.vat"/><span style="color:black;">:الرقم الضريبي للعميل</span></p>
@@ -315,19 +315,24 @@
 
                      <div class="container-fluid" >
                           <div style="width:100%;" class="row">
-                            <div t-if="o.invoice_origin" class="col-auto" style="width:35%;text-align:center;">
-                                <span style="font-size:17px;color:black;padding-right:5px;">Reference No</span>/
-                                <span style="font-size:19px;color:black;">المرجع</span><br></br>
+                            <div  class="col-auto" style="text-align:center;">
+                                <span style="font-size:14px;color:black;padding-right:5px;">Invoice Date</span>/
+                                <span style="font-size:14px;color:black;">تاريخ الفاتورة</span><br></br>
+                                <p class="text-center" t-field="o.invoice_date"/>
+                            </div>
+                            <div t-if="o.invoice_origin" class="col-auto" style="text-align:center;">
+                                <span style="font-size:14px;color:black;padding-right:5px;">Reference No</span>/
+                                <span style="font-size:14px;color:black;">المرجع</span><br></br>
                                 <p class="text-center" t-field="o.invoice_origin"/>
                             </div>
-                              <div t-if="o.bayan" class="col-auto" style="width:30%;text-align:center;">
-                                <span style="font-size:17px;color:black;padding-right:5px;">Bayan</span>/
-                                <span style="font-size:19px;color:black;">رقم البيان </span><br></br>
+                              <div t-if="o.bayan" class="col-auto" style="text-align:center;">
+                                <span style="font-size:14px;color:black;padding-right:5px;">Bayan</span>/
+                                <span style="font-size:14px;color:black;">رقم البيان </span><br></br>
                                 <p class="text-center" t-field="o.bayan"/>
                             </div>
-                              <div t-if="o.bill_of_lading" class="col-auto" style="width:35%;text-align:center;">
-                                <span style="font-size:17px;color:black;padding-right:5px;">Bill of Lading</span>/
-                                <span style="font-size:19px;color:black;">بوليصة الشحن </span><br></br>
+                              <div t-if="o.bill_of_lading" class="col-auto" style="text-align:center;">
+                                <span style="font-size:14px;color:black;padding-right:5px;">Bill of Lading</span>/
+                                <span style="font-size:14px;color:black;">بوليصة الشحن </span><br></br>
                                 <p t-field="o.bill_of_lading"/>
                             </div>
                           </div>
